<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_album_name"/>

    <Button
        android:id="@+id/btnSelectPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photos"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>