<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/checkBoxPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people" />

    <EditText
        android:id="@+id/editTextPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_names_separated_by_commas"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/checkBoxLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        android:autofillHints="" />

</LinearLayout>